# Runnir

./: .gitignore  Cargo.toml  README.md  install.sh
assets/: runnir.desktop
assets/fonts/: NOTICE.md
docs/: DEVLOG.md
docs-site/: README.md  index.html  package-lock.json  package.json  vite.config.js
docs-site/src/: App.jsx  i18n.jsx  main.jsx  styles.css
docs-site/src/components/: ConfigPage.jsx  FeatureCard.jsx  Hero.jsx  InstallPage.jsx  Intro.jsx  Kbd.jsx  KeybindingsPage.jsx  Sidebar.jsx  TerminalDemo.jsx
docs-site/src/data/: config.js  features.js  install.js  keybindings.js  media.js  sections.js
src/: actions.rs  ai.rs  app_ai.rs  app_draw.rs  app_input.rs  bg_shader.wgsl  boxdraw.rs  catchup.rs  clipboard.rs  config.rs  control.rs  dnd.rs  docker.rs  docs.rs  explorer.rs  font.rs  git.rs  graphics.rs  grid.rs  guardian.rs  hints.rs  history.rs  image_shader.wgsl  keys.rs  layout.rs  main.rs  media.rs  mouse.rs  overlay.rs  pane.rs  platform.rs  project_session.rs  pty.rs  render.rs  selection.rs  session.rs  settings.rs  shader.wgsl  shell_integration.rs  tab.rs  (+6 more)
