[package]
name = "runnir"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
base64 = "0.22.1"
bitflags = { version = "2.13.1", features = ["serde"] }
bytemuck = { version = "1.25.1", features = ["derive"] }
dirs = "6.0.0"
fontdb = "0.23.0"
image = "0.25.10"
pollster = "1.0.1"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
swash = "0.2.9"
toml = "1.1.3"
unicode-width = "0.2.2"
ureq = { version = "3.3.0", features = ["json"] }
vte = "0.15.0"
wgpu = "30.0.0"
winit = "0.30.13"

# Unix process/fs bits (O_NOFOLLOW, sysctl on macOS).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Wayland drag-and-drop. winit 0.30 has none on Wayland, so `dnd` talks to
# wl_data_device on winit's own connection. Version-matched to what winit already
# pulls in, so there is one wayland-client in the tree, not two.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wayland-client = "0.31.14"

# macOS process introspection (cwd + foreground name), the /proc equivalent.
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
